--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,3 +54,9 @@ h2 {
     text-align: center;
     font-weight: 600;
 }
+
+address {
+    margin-top: 20px;
+    margin-bottom: 0;
+    font-style: normal;
+}
