Registro de Detetives - CSS

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 /* CSS - Configurações Padrões das páginas
-   Autora : Larissa Alves de Souza - SP302394X */
+   Autora : Larissa Alves de Souza - SP302394X 
+   Autora: Katharine Fernandes Viana Rodrigues- SP302718X */
 
 body {
     margin: 0;
@@ -67,4 +68,43 @@ ol {
 
 ol li {
     margin: 20px 0;
+}
+
+#mensagem {
+    height: 235px;
+}
+
+input, textarea, button {
+    width: 860px;
+    height: 56px;
+    padding-left: 10px;
+    margin-top: 0.5em;
+
+    outline: none;
+    border: solid 1px #c0c0c0;
+    border-radius: 15px;
+    box-shadow: 1px 2px 2px #acacac;			
+
+    letter-spacing: 0.2px;
+    opacity: 75%;
+}
+
+.form p, input, textarea {
+    text-align: justify;
+    font-size: 20px;
+}
+
+button {
+    height: 48px;
+    background: #909090;
+    border-radius: 29px;
+    border: none;
+
+    outline: none;		
+    cursor: pointer;
+    font-size: 22px;
+    color: #fff;
+}
+button:hover {
+    box-shadow: 1px 2px 4px #808080;
 }
