Registro de Detetives: Navbar e Footer

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -10,6 +10,7 @@ body {
 /* Estilização do conteúdo do Rodapé*/
 
 #Footer {
+    margin-right: 92px;
     padding: 23px 0;
     bottom: 0;
     width: 100%;
