--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,10 @@ h2 {
     font-size: 22px;
 }
 
+.title {
+    margin-top: 35px;
+}
+
 .text {
     text-align: justify;
     margin-top: 50px;
@@ -89,6 +93,15 @@ button {
     box-shadow: 1px 2px 2px #acacac;
     letter-spacing: 0.2px;
     opacity: 75%;
+}
+
+.btn {
+    font-size: 20px;
+    margin-left: 550px;
+    width: 306px;
+    height: 50px;
+    background-color: #0f1642;
+    opacity: 100%;
 }
 
 .form p,
